--- a/exam_app/templates/dashboard/candidatedata.html
+++ b/exam_app/templates/dashboard/candidatedata.html
@@ -294,7 +294,7 @@ a:link {
       </div>
       </div>
     </div>
-    <a href="{% url 'dashboard' %}" class="btn btn-secondary" style="margin-left:50%; margin-top:10px;">Back</a>
+    <a href="{% url 'candidate_dashboard' %}" class="btn btn-secondary" style="margin-left:50%; margin-top:10px;">Back</a>
   </div>
 </body>
 <script>
