--- a/exam_app/templates/dashboard/candidatedata.html
+++ b/exam_app/templates/dashboard/candidatedata.html
@@ -250,7 +250,7 @@ a:link {
               <h3 class="mb-1"></i>Level 1</h3>
             </div>
             <div class="card-body pt-0">
-              <h5>level 1 not Attempted</h5>
+              <h5>Level 1 not Attempted</h5>
             </div>
           </div>
           {% endif %}
@@ -286,7 +286,7 @@ a:link {
               <h3 class="mb-1"></i>Level 2</h3>
             </div>
             <div class="card-body pt-0">
-              <h5>level 2 not Attempted</h5>
+              <h5>Level 2 not Attempted</h5>
             </div>
           </div>
           {% endif %}
